test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 29 May 2025 14:52:03 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="f2S1Koz6MUw/2Tij1DoZH3LzTspzDVE4", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}